# src/backend/openapi.json
@@ -572,6 +572,22 @@
             }
           },
           {
+            "name": "site_id",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Site Id"
+            }
+          },
+          {
             "name": "tag",
             "in": "query",
             "required": false,
